unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch_Settings__c/pse__Create_Billing_Documents_Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the settings used by Batch Apex jobs for Create Billing Documents batch.</description>
    <label>Create Billing Documents Batch Settings</label>
</CustomObject>