unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch_Settings__c/fields/pse__Create_Billing_Documents_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Create_Billing_Documents_Batch_Size__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The number of records to process in a single batch. The value is 3 by default.</description>
    <inlineHelpText>The number of records to process in a single batch. The value is 3 by default.</inlineHelpText>
    <label>Create Billing Documents Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>