unpackaged/main/default/objects/pse__Create_Billing_Documents_Batch_Settings__c/fields/pse__Notifications_Email__c.field-meta.xml
<CustomField>
    <fullName>pse__Notifications_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, notifications from Create Billing Documents batch processes are sent via email to recipients listed in the Notification Recipients setting. This is selected by default.</description>
    <inlineHelpText>If selected, notifications from Create Billing Documents batch processes are sent via email to recipients listed in the Notification Recipients setting. This is selected by default.</inlineHelpText>
    <label>Notifications by Email</label>
    <type>Checkbox</type>
</CustomField>